--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -4,6 +4,7 @@
 <% @authors.each do |author| %>
   <li>
   <%= link_to author.name, author_path(author) %><br>
+  <%= image_tag author.avatar.url(:thumb) %>
   <%= author.bio %>
   </li>
 <% end %>
